Refactoring domain events + increment version to 2.0.0